kubernetes/apps/security/wazuh/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wazuh
  namespace: security
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Wazuh
    gethomepage.dev/group: Security
    gethomepage.dev/icon: wazuh.svg
    gethomepage.dev/description: XDR and SIEM
spec:
  hostnames:
    - wazuh.${SECRET_DOMAIN}
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: wazuh-dashboard
          port: 5601
